# xairpg

./: .gitignore  README.md  app.py  create_npc.py  miniagent.py  pyproject.toml  test1.py  test2.py  test3.py  test_tictactoe.py  tictactoe.py
game/: eirlys_nightshade.json  elara_vex.json  eleanor_wychwood.json  eliana_vex.json  kaelin_darkshadow.json  marlena_graves.json  zara_al-masri.json
prompts/: npc_prompt.txt  planner.txt
src/ai_call/: ai.py
src/npc/: npc.py
src/plan/: __init__.py  planner.py
src/trade/: magic_material.py  magic_material_test.py
