[tool.poetry]
name = "airpg"
version = "0.1.0"
description = ""
authors = ["James White <grimkey@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
ollama = "^0.4.5"
pydantic = "^2.10.4"
pytest = "^8.3.4"
shapely = "^2.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
